Fix for titles and keywords getting too long

--- a/public/stylesheets/slide_500.css
+++ b/public/stylesheets/slide_500.css
@@ -3,14 +3,30 @@ html {
 }
 body {
   background-color: #222;
+  margin-top: 30px;
 }
 
 body .container {
   position: relative;
-  overflow: hidden;
-  padding: 40px;
-  margin-top: 20px;
+  margin: 0 auto;
+  min-height: 100%;
+  height: 100%;
 }
+
+#header {
+  display: block;
+}
+#content {
+  display: block;
+  padding: 1em 1em 5em;
+}
+
+#footer {
+ position: absolute;
+ width: 100%;
+ bottom: 0;
+}
+
 h1 {
   color: #ccc;
   float: left;
